setting up the basic structure for my website warmup

--- a/index.qmd
+++ b/index.qmd
@@ -1,7 +1,5 @@
 ---
-title: "Warmup-jordan-miller"
+title: "Welcome!"
 ---
 
-This is a Quarto website.
-
-To learn more about Quarto websites visit <https://quarto.org/docs/websites>.
+this is the home page
