--- a/404.qmd
+++ b/404.qmd
@@ -2,4 +2,4 @@
 title: Not Found
 ---
 
-Woops, it seems that the page you are looking for does not exist.  Use the top or sidebar navigation to go seomwhere else!
+It seems the dog ate this page! use the navigation bar at the top to return to website
