--- a/posts/11-30-2023 blog 1/index.qmd
+++ b/posts/11-30-2023 blog 1/index.qmd
@@ -10,14 +10,13 @@ image: banner.jpg
 
 ##	Introduction
 
-```
 Since its inception in 2009 with the introduction of Bitcoin, cryptocurrency has become a global phenomenon, sparking controversy and admiration as one of the most esteemed stores of value. Despite its relative youth, the 
 success of cryptocurrency prompts an exploration into its nature and the factors contributing to its widespread adoption. Cryptocurrency, often called crypto, is a digital currency whose value hinges on investor interest, resembling the dynamics of modern-day stocks. However, a crucial distinction lies in its detachment from any specific company. Unlike stocks, which are tethered to a company's performance, the value of crypto is largely derived from the belief in its sustained success. One way crypto appreciates its value stems from a reduction in the issuance of new coins over time, diminishing the overall supply and amplifying demand for higher-value coins. It has been seen time and again that when the crypto stock of coins is halved the price increases. Just looking at the first Bitcoin halving, the price of one coin shot from $12 to $1032 due to the new scarcity and increased acceptance (Lielacher A. 2023). This unique mechanism enables cryptocurrencies to mimic one of the major requirements to be a successful fiat currency, which is that it needs to be a scarce resource for demand to remain high (Kelleher J. 2023). In fact crypto follows just about every necessary category fiat currency deems necessary, including but not limited to the fact that it is widely accepted, easily divisible, and uniform. An edge that crypto holds over traditional fiat currency as well is the fact that it is impossible to counterfeit it. Since coins are created by multiple people looking at each other’s validations and confirming that everything is true, it is impossible to create a counterfeit coin that can’t be easily found out that it is not real. So what is cryptocurrency really, and how is it made? Understanding how crypto is produced is imperative to grasp its intricate dynamics. Presently, two primary methods dominate the generation of cryptocurrency: proof of work and proof of stake. Proof of work, the traditional approach, entails individuals competing to solve mathematical puzzles, with the winner earning the right to add to the blockchain—a process commonly known as crypto mining. This “mining” is essentially independent contractors acting as auditors to validate transactions, and being paid in the form of the crypto that they are mining for (Hong E. 2023). All of this validation occurs by using a computer to solve the puzzle in a competition to be the fastest, as only one person receives the reward per validation. Initially feasible with minimal hardware, this method now demands specialized computers dedicated to crypto mining due to increased competition. On the other hand, proof of stake involves participants staking their existing crypto holdings to validate transactions on the blockchain, receiving interest in the form of the staked crypto as a reward. This locks people in to the validation process, as leaving before the validation is finished entails losing your staked crypto that you put on the line. This more contemporary method is accessible to newcomers entering the crypto sphere, as it merely requires a financial investment to generate returns. A question arises concerning Bitcoin, the foremost cryptocurrency, and its reluctance to evolve with the times by transitioning to proof of stake. Proposing a shift to this alternative method could potentially revolutionize the entire crypto industry. Such a move by Bitcoin could serve as a catalyst, prompting a collective industry shift away from proof of work. This transformation would usher in a new era for cryptocurrencies, with Bitcoin leading the charge towards a more technologically advanced and sustainable future. If Bitcoin were to embrace proof of stake, it has the potential to instigate a widespread transformation in the crypto landscape, compelling others to follow suit. This paradigm shift could trigger positive changes across economies globally. Embracing technological advancements in cryptocurrency generation could enhance efficiency, accessibility, and sustainability, fostering a positive impact on the entire industry and, by extension, economies at large.
-```
+
 
 ##	Discussion
 
-```
+
 Currently, the top two cryptocurrencies dominating the market are Ethereum and the founder token Bitcoin. Ethereum, while not as old as Bitcoin, has enjoyed rapid success by focusing its platform on smart contracts. Until 
 recently, Ethereum was also running on the traditional proof of work method but realized that it could significantly reduce energy usage on its platform by moving to proof of stake. So, it set forth a plan to transition to 
 proof of stake in stages, allowing for it to make sure that no singular transition would break the platform. This worried the whole industry, as Ethereum was the second biggest cryptocurrency, and doing this transition
@@ -49,28 +48,29 @@ Claudia, M. 2021). It was widely believed that swapping proof of stake from proo
 however showed the whole world that swapping to proof of stake was not impossible and could be done without any issues. Ethereum handled this task by splitting its “merge” into multiple stages so that it could verify that 
 each stage passed without a hitch before continuing. After the merger, Ethereum saw a reduction in its energy usage of 99.98%, allowing it to be an environmentally sustainable approach to cryptocurrency (Kapengut, E. & 
 Mizrach, B. 2023). This marks an incredibly significant impact for swapping methods of generation, as one of the biggest issues introduced by Bitcoin mining is its energy usage.
-```
+
  
 ##	Analysis
 
-```
-As a business model, it is usually in an organization’s best interest to work on environmental sustainability efforts, as they both improve public image and ensure that you will be able to continue doing business for the 
-foreseeable future. Bitcoin, however, does not concern itself with its carbon footprint, as is evident by the fact that it is one of the biggest contributors to global warming despite being so young. It is predicted that 
-Bitcoin alone could lead to up to a two-degree addition to the global temperature (Rho, 2022). This is not the only source to find that Bitcoin is completely unsustainable for the environment; Benjamin Jones from UNM also 
-concluded that there is no future where our planet can sustain the global emissions coming from the mining of Bitcoin. To make matters worse, nearly 40% of the energy used for Bitcoin mining comes from the burning of fossil 
-fuels, which is why we see such high amounts of carbon emissions coming from something that hasn’t even lived a full decade (Bitstamp, 2023). So then, looking at their competitor Ether, we see that fears over the possibility of successfully being able to swap from one mechanism to another are unfounded, as Ethereum managed to perform the merge with no issues. Not only that but as mentioned before, Ethereum saw a reduction in energy consumption by 90%, making it much more sustainable in terms of operating for the future (Giles & Jones, 2022). Looking back at Bitcoin, they have the legitimate worry of being banned in countries for its environmental destruction. China was the most notable country in recent history to ban crypto mining to reduce pollution (Browne, 2022). This ended up being a massive blow to Bitcoin since they were one of the primary areas where many coins were constantly being minted. This uncertainty is yet another reason why Bitcoin should move to proof of stake, as countries are beginning to regulate crypto much more closely. This means that if they do not get their operations under control and follow global interest, they could be forced to shut down altogether (Narain & Moretti, 2022). Looking at all this data, it is clear to see that Bitcoin has an uncertain future ahead of them at the moment. If they do not decide to do something about the massive waste of energy it is producing, many countries might follow China’s example and ban the mining of it. Next, looking at Bitcoin from an internal standpoint using the SWOT analysis to determine whether what they are doing is working. Starting with the strengths, we see that Bitcoin’s primary power lies in the fact that it was the first cryptocurrency that has grown to the point that it is seen as too big to fail. Due to this trust, many big businesses invest very large amounts of money into it, making it even harder for it to fade completely out of existence. There is also the reliability of the network; being proof of work means that the minting of the coins does have some value since the energy that was used is valuable. Looking at its weaknesses, the most glaring one is that it uses a ridiculous amount of energy, which is not sustainable for the environment. There is also the fact that the industry has become increasingly difficult to have a chance at receiving the coin from mining since competitors are using specialized equipment to guarantee their chances of receiving the prize. As far as opportunities available to Bitcoin, they could market themselves as something resisting change, which could be successful depending on the audience they market it to. Lastly, the threats they face are numerous, including the risk of bans for its environmental impact and a loss of interest due to it not upgrading its technology to match the modern age. 
-```
+
+As a business model, it is usually in an organization’s best interest to work on environmental sustainability efforts, as they both improve public image and ensure that you will be able to continue doing business for the foreseeable future. Bitcoin, however, does not concern itself with its carbon footprint, as is evident by the fact that it is one of the biggest contributors to global warming despite being so young. It is predicted that Bitcoin alone could lead to up to a two-degree addition to the global temperature (Rho, 2022). This is not the only source to find that Bitcoin is completely unsustainable for the environment; Benjamin Jones from UNM also concluded that there is no future where our planet can sustain the global emissions coming from the mining of Bitcoin. To make matters worse, nearly 40% of the energy used for Bitcoin mining comes from the burning of fossil 
+fuels, which is why we see such high amounts of carbon emissions coming from something that hasn’t even lived a full decade (Bitstamp, 2023). So then, looking at their competitor Ether, we see that fears over the possibility 
+of successfully being able to swap from one mechanism to another are unfounded, as Ethereum managed to perform the merge with no issues. Not only that but as mentioned before, Ethereum saw a reduction in energy consumption by 90%, making it much more sustainable in terms of operating for the future (Giles & Jones, 2022). Looking back at Bitcoin, they have the legitimate worry of being banned in countries for its environmental destruction. China was the most notable country in recent history to ban crypto mining to reduce pollution (Browne, 2022). This ended up being a massive blow to Bitcoin since they were one of the primary areas where many coins were constantly being minted. This uncertainty is yet another reason why Bitcoin should move to proof of stake, as countries are beginning to regulate crypto much more closely. This means that if they do not get their operations under control and follow global interest, they could be forced to shut down altogether (Narain & Moretti, 2022). Looking at all this data, it is clear to see that Bitcoin has an uncertain future ahead of them at the moment. If they do not decide to do something about the massive waste of energy it is producing, many countries might follow China’s example and ban the mining of it. Next, looking at Bitcoin from an internal standpoint using the SWOT analysis to determine whether what they are doing is working. Starting with the strengths, we see that Bitcoin’s primary power lies in the fact that it was the first cryptocurrency that has grown to the point that it is seen as too big to fail. Due to this trust, many big businesses invest very large amounts of money into it, making it even harder for it to fade completely out of existence. There is also the reliability of the network; being proof of work means that the minting of the coins does have some value since the energy that was used is valuable. Looking at its weaknesses, the most glaring one is that it uses a ridiculous amount of energy, which is not sustainable for the environment. There is also the fact that the industry has become increasingly difficult to have a chance at receiving the coin from mining since competitors are using specialized equipment to guarantee their chances of receiving the prize. As far as opportunities available to Bitcoin, they could market themselves as something resisting change, which could be successful depending on the audience they market it to. Lastly, the threats they face are numerous, including the risk of bans for its environmental impact and a loss of interest due to it not upgrading its technology to match the modern age. 
+
 
 ##	Conclusion
 
-```
+
 In conclusion, the evolution of cryptocurrency, particularly exemplified by Bitcoin, presents a critical juncture at the intersection of technological innovation, environmental sustainability, and market dynamics. The 
-success and global impact of cryptocurrency underscore its potential to reshape financial landscapes. The contrasting approaches of proof of work and proof of stake in generating cryptocurrencies, as illustrated by Bitcoin and Ethereum, illuminate the complexities and choices faced by the industry. Ethereum's successful transition to proof of stake demonstrates the feasibility of a more sustainable and energy-efficient model. In contrast, Bitcoin's adherence to proof of work raises concerns about its environmental impact and regulatory risks, as evidenced by China's ban on crypto mining. The hesitation to adopt an eco-friendlier approach, despite the clear benefits, places Bitcoin at a crossroads, with potential consequences for its global acceptance and regulatory standing. As the crypto industry navigates this pivotal moment, embracing sustainable practices and technological advancements becomes not only a strategic imperative but also a key driver for positive change, fostering growth, trust, and resilience in the evolving landscape of digital currencies.
-```
+success and global impact of cryptocurrency underscore its potential to reshape financial landscapes. The contrasting approaches of proof of work and proof of stake in generating cryptocurrencies, as illustrated by Bitcoin 
+and Ethereum, illuminate the complexities and choices faced by the industry. Ethereum's successful transition to proof of stake demonstrates the feasibility of a more sustainable and energy-efficient model. In contrast, 
+Bitcoin's adherence to proof of work raises concerns about its environmental impact and regulatory risks, as evidenced by China's ban on crypto mining. The hesitation to adopt an eco-friendlier approach, despite the clear 
+benefits, places Bitcoin at a crossroads, with potential consequences for its global acceptance and regulatory standing. As the crypto industry navigates this pivotal moment, embracing sustainable practices and technological 
+advancements becomes not only a strategic imperative but also a key driver for positive change, fostering growth, trust, and resilience in the evolving landscape of digital currencies.
+
 
 ##	References
 
-```
 Rho, E. (2022, May 11). The sustainability of bitcoin and its impact on the environment. Global Research and Consulting Group Insights. https://insights.grcglobalgroup.com/the-sustainability-of-bitcoin/ 
 
 Jones, B. (2022, September 29). Technology: UNM researchers find bitcoin mining is environmentally unsustainable. UNM Newsroom. https://news.unm.edu/news/technology-unm-researchers-find-bitcoin-mining-is-environmentally-unsustainable 
@@ -100,4 +100,3 @@ Hong, E. (October 18, 2023). How Does Bitcoin Mining Work? Investopedia. https:/
 Kelleher, J. (October 8, 2023). Why Do Bitcoins Have Value? Investopedia. https://www.investopedia.com/ask/answers/100314/why-do-bitcoins-have-value.asp
 
 Lielacher, A. (2023). What is Bitcoin halving and how does it affect BTC's price? Axi. https://www.axi.com/int/blog/education/cryptocurrencies/bitcoin-halving#:~:text=Bitcoin%20halving%20events%20have%20historically,as%20a%20result%2C%20the%20price.
-```
